[package]
name = "checkin"
version = "0.1.0"
authors = ["smoothsea <smoothsea>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
regex = "1.3.5"
serde = "1.0.105"
serde_json = "1.0.48"
chrono = "0.4"




